[gd_scene format=3 uid="uid://dv3rlwcaxx5bc"]

[ext_resource type="Script" uid="uid://dbpkdi6s4ykof" path="res://scripts/ui/CombatOverlay.gd" id="1_4i80j"]

[node name="CombatOverlay" type="CanvasLayer" unique_id=1875706386]
script = ExtResource("1_4i80j")
healthbar_tween_time = 0.1
tween_transition_type = 1

[node name="Player1" type="Control" parent="." unique_id=598076297]
layout_mode = 3
anchors_preset = 0
offset_right = 500.0
offset_bottom = 59.0

[node name="Panel" type="Panel" parent="Player1" unique_id=1286678965]
layout_mode = 0
offset_right = 499.0
offset_bottom = 58.0

[node name="HealthBar" type="ColorRect" parent="Player1" unique_id=1373819557]
layout_mode = 0
offset_left = 7.0
offset_top = 6.0
offset_right = 492.0
offset_bottom = 51.0
color = Color(0, 1, 0.29411766, 1)

[node name="Player2" type="Control" parent="." unique_id=2027344772]
layout_mode = 3
anchors_preset = 0
offset_left = 646.0
offset_top = 2.0
offset_right = 1146.0
offset_bottom = 61.0

[node name="Panel" type="Panel" parent="Player2" unique_id=195740201]
layout_mode = 0
offset_right = 499.0
offset_bottom = 58.0

[node name="HealthBar" type="ColorRect" parent="Player2" unique_id=232848659]
layout_mode = 0
offset_left = 492.0
offset_top = 51.0
offset_right = 977.0
offset_bottom = 96.0
rotation = 3.1415927
color = Color(0, 1, 0.29411766, 1)
